# langchain-tutorials-campusx

./: .gitignore  README.md  config.py  consts.py  pyproject.toml  review_output.json  template.json
07.chains/: chains_demo.py  conditional_chain.py  parallel_chain.py  sequential_chain.py
08.runnables/: parallel_runnables.py  runnable_branch.py  runnable_lambda.py  runnable_passthrough.py  runnable_sequential.py
09.document_loaders/: csv_load_test.py  doc_loader_langchain.py  pdf_doc_loader.py  web_load_test.py
1.LLMS/: openai_gpt.py
10.vector_stores/: vector_stores.ipynb
11.retreivers/: example.ipynb  retreiver_example.py
12.rags/: rag_using_langchain.ipynb  youtube_transcript.ipynb
12.rags/Gfr50f6ZBvo/: index.faiss  index.pkl
13.tools/: tools.ipynb
2.ChatModels/: chatmodel_gemini.py  chatmodel_openai.py  hugging_face.py  local_huggingface.py
3.EmbeddedModels/: embedding_docs_openai.py  openai_embeddings.py
4.prompts/: chat_history.txt  chat_prompt_template.py  mesasage_placeholder.py  prompt_generator.py  prompt_ui.py
5.structured_output/: pydantic_demo.py  typedict_demo.py  with_structured_output.py
6.output_parsers/: json_output_parser.py  no_parser.py  pydantic_parser.py  str_parser.py  structured_parser.py
chatbot_app/: chatbot.py  messages.py
