[project]
name = "langchain-tutorials-campusx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckduckgo-search>=8.0.1",
    "faiss-cpu>=1.10.0",
    "grandalf>=0.8",
    "jupyter>=1.1.1",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.51",
    "langchain-experimental>=0.3.4",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=2.0.9",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.1",
    "langchain-openai>=0.3.5",
    "pydantic>=2.10.6",
    "pydantic[email]",
    "pypdf>=5.4.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.42.2",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.0.3",
]
